--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,19 @@ body {
     color:#FFFFFF;
 }
 
+.col-md-12 {
+    text-align: center;
+    background-color:#005979;
+}
+
+tr > th {
+    text-align:left;
+    display:inline-block;
+    padding-left: 10px;
+    margin-left: 10px;
+    line-height: 15px;
+}
+
+.panel-body {
+    text-align: -webkit-center;
+}
